# FIXimpl

./: .gitignore  CMakeLists.txt  README.md  build.sh  startup.sh
FixConfiguration/: FIX42CoinbaseSandbox.xml  bfxclientconfig.cfg  quickfixstunnel.conf
bfxapplication/: CMakeLists.txt
bfxapplication/include/: BfxApplication.hpp
bfxapplication/include/custom_messages/: FixCoinbaseFieldNumbers.h  FixCoinbaseFields.h  NewOrderBatch.h  NewOrderBatchReject.h  OrderCancelBatchReject.h  OrderCancelBatchRequest.h
bfxapplication/include/data_structures/: ExecutionTableModel.hpp  Order.hpp  OrderTableModel.hpp
bfxapplication/src/: BfxApplication.cpp
bfxclient/: BfxClient.cpp  BfxClient.hpp  CMakeLists.txt  logic.drawio
bfxclient/CliClient/: CMakeLists.txt  CliClient.cpp
bfxclient/include/: BfxApplication.hpp  Misc.hpp  OrderTypes.hpp
bfxclient/interfaces/cli/: CMakeLists.txt  Cli.cpp
bfxclient/interfaces/qRPC/include/proto/: CMakeLists.txt  bfxclient.proto
bfxclient/src/: BfxApplication.cpp
bfxclient/test/: AuthenticationTest.cpp  BfxClientTests.cpp  CMakeLists.txt  Fixtures.hpp
bfxclient_abstract/: CMakeLists.txt
bfxclient_abstract/include/: BfxClientAbstract.hpp
bfxclient_abstract/test/: BfxClientTests.cpp  CMakeLists.txt  Fixtures.hpp
bfxclient_cli/: CMakeLists.txt
bfxclient_cli/include/: BfxApplicationCLI.hpp
bfxclient_cli/src/: BfxApplicationCLI.cpp  BfxClientCli.cpp
bfxclient_qrpc/: CMakeLists.txt
bfxclient_qrpc/grpc/: messaging.proto  protogen.sh
bfxclient_qrpc/include/: BfxApplicationQRpc.hpp  BfxQRpcServer.hpp
bfxclient_qrpc/qrpc/: messaging.proto  protogen.sh
bfxclient_qrpc/src/: BfxApplicaitonQRpc.cpp  BfxClientQRpc.cpp  BfxQRpcEntryPoint.cpp  BfxQRpcServer.cpp
scripts/: StartBITFINEXgateway.sh
